# crossport

./: .cspell.json  .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  flake.nix
.github/workflows/: ci.yml  release.yml
config/: config.toml  crossport.example.toml
src/: cli.rs  config.rs  display.rs  lib.rs  main.rs  ops.rs  utils.rs
src/core/: mod.rs  process.rs  snapshot.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: basic_tests.rs
