[package]
name = "crossport"
version = "0.2.0"
edition = "2021"
authors = ["mt <nico.as.nicos@gmail.com>"]
description = "Cross-platform port helper CLI (skeleton)"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
dirs = "6.0.0"
sysinfo = "0.30"
nix = { version = "0.28", features = ["signal", "user"] }
colored = "2.1"
regex = "1.10"
once_cell = "1.19"
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"
